target/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'true'", "'false'", "'number'", 
                     "'bool'", "'string'", "'return'", "'var'", "'dynamic'", 
                     "'func'", "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'not'", 
                     "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!='", "'>='", "'<='", "'='", "'<'", "'>'", "'=='", 
                     "'...'", "'<-'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "WS", "TYPE", "COMMENT", "NUMBER_TOKEN", 
                      "STRING_TOKEN", "TRUE", "FALSE", "NUMBER", "BOOL", 
                      "STRING", "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", 
                      "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "NOT", "AND", "OR", "ADD_OP", 
                      "SUB_OP", "MULT_OP", "DIV_OP", "MOD_OP", "NE_OP", 
                      "GE_OP", "LE_OP", "SINGLE_EQUAL_OP", "L_OP", "G_OP", 
                      "DOUBLE_EQUAL_OP", "ETC_OP", "ASSIGN_OP", "OPERATOR", 
                      "IDENTIFIER", "NEWLINE", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", 
                      "LEFT_BRACKET", "RIGHT_BRACKET", "COMMA", "END_COMMAND", 
                      "SEPARATOR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_not_nullable_declaration = 1
    RULE_math = 2
    RULE_arithmetic = 3
    RULE_atomic = 4
    RULE_string_arithmetic = 5
    RULE_compare_arithmetic = 6
    RULE_logical_arithmetic = 7
    RULE_adding_arithmetic = 8
    RULE_multiplying_arithmetic = 9
    RULE_not_arithmetic = 10
    RULE_sign_arithmetic = 11
    RULE_bracket_arithmetic = 12
    RULE_list_arithmetic = 13
    RULE_element_expression = 14
    RULE_function_call = 15
    RULE_function_expression = 16
    RULE_list_of_arithmetic_argument = 17
    RULE_index_expression = 18
    RULE_function_declaration = 19
    RULE_array_form_parameter = 20
    RULE_index_array_form_parameter = 21
    RULE_list_of_function_parameter = 22
    RULE_return_expression = 23
    RULE_block_statement = 24
    RULE_list_of_lines = 25
    RULE_line = 26
    RULE_atom = 27
    RULE_assign_statement = 28
    RULE_type_statement = 29
    RULE_var_statement = 30
    RULE_if_statement = 31
    RULE_elif_list = 32
    RULE_for_statement = 33
    RULE_break_statement = 34
    RULE_continue_statement = 35

    ruleNames =  [ "program", "not_nullable_declaration", "math", "arithmetic", 
                   "atomic", "string_arithmetic", "compare_arithmetic", 
                   "logical_arithmetic", "adding_arithmetic", "multiplying_arithmetic", 
                   "not_arithmetic", "sign_arithmetic", "bracket_arithmetic", 
                   "list_arithmetic", "element_expression", "function_call", 
                   "function_expression", "list_of_arithmetic_argument", 
                   "index_expression", "function_declaration", "array_form_parameter", 
                   "index_array_form_parameter", "list_of_function_parameter", 
                   "return_expression", "block_statement", "list_of_lines", 
                   "line", "atom", "assign_statement", "type_statement", 
                   "var_statement", "if_statement", "elif_list", "for_statement", 
                   "break_statement", "continue_statement" ]

    EOF = Token.EOF
    WS=1
    TYPE=2
    COMMENT=3
    NUMBER_TOKEN=4
    STRING_TOKEN=5
    TRUE=6
    FALSE=7
    NUMBER=8
    BOOL=9
    STRING=10
    RETURN=11
    VAR=12
    DYNAMIC=13
    FUNC=14
    FOR=15
    UNTIL=16
    BY=17
    BREAK=18
    CONTINUE=19
    IF=20
    ELSE=21
    ELIF=22
    BEGIN=23
    END=24
    NOT=25
    AND=26
    OR=27
    ADD_OP=28
    SUB_OP=29
    MULT_OP=30
    DIV_OP=31
    MOD_OP=32
    NE_OP=33
    GE_OP=34
    LE_OP=35
    SINGLE_EQUAL_OP=36
    L_OP=37
    G_OP=38
    DOUBLE_EQUAL_OP=39
    ETC_OP=40
    ASSIGN_OP=41
    OPERATOR=42
    IDENTIFIER=43
    NEWLINE=44
    LEFT_SQUARE_BRACKET=45
    RIGHT_SQUARE_BRACKET=46
    LEFT_BRACKET=47
    RIGHT_BRACKET=48
    COMMA=49
    END_COMMAND=50
    SEPARATOR=51
    ILLEGAL_ESCAPE=52
    UNCLOSE_STRING=53
    ERROR_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_nullable_declaration(self):
            return self.getTypedRuleContext(ZCodeParser.Not_nullable_declarationContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.not_nullable_declaration()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZCodeParser.NEWLINE:
                self.state = 73
                self.match(ZCodeParser.NEWLINE)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Not_nullable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self):
            return self.getTypedRuleContext(ZCodeParser.Function_declarationContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def not_nullable_declaration(self):
            return self.getTypedRuleContext(ZCodeParser.Not_nullable_declarationContext,0)


        def type_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Type_statementContext,0)


        def var_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Var_statementContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_not_nullable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot_nullable_declaration" ):
                return visitor.visitNot_nullable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def not_nullable_declaration(self):

        localctx = ZCodeParser.Not_nullable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_not_nullable_declaration)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ZCodeParser.NEWLINE:
                    self.state = 81
                    self.match(ZCodeParser.NEWLINE)
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 87
                self.function_declaration()
                self.state = 89
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.not_nullable_declaration()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ZCodeParser.NEWLINE:
                    self.state = 91
                    self.match(ZCodeParser.NEWLINE)
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 97
                self.type_statement()
                self.state = 98
                self.match(ZCodeParser.NEWLINE)
                self.state = 100
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 99
                    self.not_nullable_declaration()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ZCodeParser.NEWLINE:
                    self.state = 102
                    self.match(ZCodeParser.NEWLINE)
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 108
                self.var_statement()
                self.state = 109
                self.match(ZCodeParser.NEWLINE)
                self.state = 111
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 110
                    self.not_nullable_declaration()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetic(self):
            return self.getTypedRuleContext(ZCodeParser.ArithmeticContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_math

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath" ):
                return visitor.visitMath(self)
            else:
                return visitor.visitChildren(self)




    def math(self):

        localctx = ZCodeParser.MathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_math)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.arithmetic()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_arithmetic(self):
            return self.getTypedRuleContext(ZCodeParser.String_arithmeticContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arithmetic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetic" ):
                return visitor.visitArithmetic(self)
            else:
                return visitor.visitChildren(self)




    def arithmetic(self):

        localctx = ZCodeParser.ArithmeticContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arithmetic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.string_arithmetic()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(ZCodeParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(ZCodeParser.FALSE, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def STRING_TOKEN(self):
            return self.getToken(ZCodeParser.STRING_TOKEN, 0)

        def list_arithmetic(self):
            return self.getTypedRuleContext(ZCodeParser.List_arithmeticContext,0)


        def atom(self):
            return self.getTypedRuleContext(ZCodeParser.AtomContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_atomic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic" ):
                return visitor.visitAtomic(self)
            else:
                return visitor.visitChildren(self)




    def atomic(self):

        localctx = ZCodeParser.AtomicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atomic)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(ZCodeParser.TRUE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(ZCodeParser.FALSE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.match(ZCodeParser.IDENTIFIER)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.match(ZCodeParser.STRING_TOKEN)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.list_arithmetic()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 124
                self.atom()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_arithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compare_arithmetic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Compare_arithmeticContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Compare_arithmeticContext,i)


        def ETC_OP(self):
            return self.getToken(ZCodeParser.ETC_OP, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_string_arithmetic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString_arithmetic" ):
                return visitor.visitString_arithmetic(self)
            else:
                return visitor.visitChildren(self)




    def string_arithmetic(self):

        localctx = ZCodeParser.String_arithmeticContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_string_arithmetic)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.compare_arithmetic()
                self.state = 128
                self.match(ZCodeParser.ETC_OP)
                self.state = 129
                self.compare_arithmetic()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.compare_arithmetic()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compare_arithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_arithmetic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Logical_arithmeticContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Logical_arithmeticContext,i)


        def GE_OP(self):
            return self.getToken(ZCodeParser.GE_OP, 0)

        def LE_OP(self):
            return self.getToken(ZCodeParser.LE_OP, 0)

        def L_OP(self):
            return self.getToken(ZCodeParser.L_OP, 0)

        def G_OP(self):
            return self.getToken(ZCodeParser.G_OP, 0)

        def NE_OP(self):
            return self.getToken(ZCodeParser.NE_OP, 0)

        def SINGLE_EQUAL_OP(self):
            return self.getToken(ZCodeParser.SINGLE_EQUAL_OP, 0)

        def DOUBLE_EQUAL_OP(self):
            return self.getToken(ZCodeParser.DOUBLE_EQUAL_OP, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_compare_arithmetic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompare_arithmetic" ):
                return visitor.visitCompare_arithmetic(self)
            else:
                return visitor.visitChildren(self)




    def compare_arithmetic(self):

        localctx = ZCodeParser.Compare_arithmeticContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_compare_arithmetic)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.logical_arithmetic(0)
                self.state = 135
                _la = self._input.LA(1)
                if not(_la==ZCodeParser.GE_OP or _la==ZCodeParser.LE_OP):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 136
                self.logical_arithmetic(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.logical_arithmetic(0)
                self.state = 139
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NE_OP) | (1 << ZCodeParser.SINGLE_EQUAL_OP) | (1 << ZCodeParser.L_OP) | (1 << ZCodeParser.G_OP))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 140
                self.logical_arithmetic(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.logical_arithmetic(0)
                self.state = 143
                self.match(ZCodeParser.DOUBLE_EQUAL_OP)
                self.state = 144
                self.logical_arithmetic(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.logical_arithmetic(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_arithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def adding_arithmetic(self):
            return self.getTypedRuleContext(ZCodeParser.Adding_arithmeticContext,0)


        def logical_arithmetic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Logical_arithmeticContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Logical_arithmeticContext,i)


        def AND(self):
            return self.getToken(ZCodeParser.AND, 0)

        def OR(self):
            return self.getToken(ZCodeParser.OR, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_logical_arithmetic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_arithmetic" ):
                return visitor.visitLogical_arithmetic(self)
            else:
                return visitor.visitChildren(self)



    def logical_arithmetic(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ZCodeParser.Logical_arithmeticContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_logical_arithmetic, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.adding_arithmetic(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ZCodeParser.Logical_arithmeticContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_arithmetic)
                    self.state = 152
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 153
                    _la = self._input.LA(1)
                    if not(_la==ZCodeParser.AND or _la==ZCodeParser.OR):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 154
                    self.logical_arithmetic(3) 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Adding_arithmeticContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplying_arithmetic(self):
            return self.getTypedRuleContext(ZCodeParser.Multiplying_arithmeticContext,0)


        def adding_arithmetic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Adding_arithmeticContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Adding_arithmeticContext,i)


        def ADD_OP(self):
            return self.getToken(ZCodeParser.ADD_OP, 0)

        def SUB_OP(self):
            return self.getToken(ZCodeParser.SUB_OP, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_adding_arithmetic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdding_arithmetic" ):
                return visitor.visitAdding_arithmetic(self)
            else:
                return visitor.visitChildren(self)



    def adding_arithmetic(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ZCodeParser.Adding_arithmeticContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_adding_arithmetic, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.multiplying_arithmetic(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ZCodeParser.Adding_arithmeticContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_adding_arithmetic)
                    self.state = 163
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 164
                    _la = self._input.LA(1)
                    if not(_la==ZCodeParser.ADD_OP or _la==ZCodeParser.SUB_OP):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 165
                    self.adding_arithmetic(3) 
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
